tests/snapshots/run_wpt_conformance__coreml_relu_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
relu.https.any.js relu float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([241, 84, 128, 64, 12, 85, 253, 83, 219, 84, 113, 212, 44, 213, 180, 206, 51, 214, 119, 208, 151, 76, 172, 208, 155, 210, 52, 201, 147, 83, 210, 202, 201, 212, 17, 200, 112, 82, 116, 210, 9, 212, 24, 197, 173, 75, 161, 85]);
  }

  nodes {
    [reluOutput] = relu(operand_0, label="");
  }

  outputs { reluOutput; }
}
