tests/snapshots/run_wpt_conformance__coreml_relu_float16_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "relu.https.any.js",
    "relu float16 2D tensor",
    "coreml",
    "PASS",
)
