tests/snapshots/run_wpt_conformance__coreml_relu_float16_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "relu.https.any.js",
    "relu float16 5D tensor",
    "coreml",
    "PASS",
)
