tests/snapshots/run_wpt_conformance__coreml_relu_float32_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "relu.https.any.js",
    "relu float32 1D tensor",
    "coreml",
    "PASS",
)
